--- a/XinZhiHua/Views/Manager/Index.cshtml
+++ b/XinZhiHua/Views/Manager/Index.cshtml
@@ -3,38 +3,85 @@
 }
 <nav class="navbar navbar-default navbar-static-top">
     <div class="container">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="#">Project name</a>
-        </div>
+        
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">Action</a></li>
-                        <li><a href="#">Another action</a></li>
-                        <li><a href="#">Something else here</a></li>
-                        <li role="separator" class="divider"></li>
-                        <li class="dropdown-header">Nav header</li>
-                        <li><a href="#">Separated link</a></li>
-                        <li><a href="#">One more separated link</a></li>
-                    </ul>
-                </li>
+                <li class="active"><a href="#">首页</a></li>
+                <li><a href="#about">公司简介</a></li>
+                <li><a href="#contact">公司宗旨</a></li>
+                <li><a href="#contact">公司荣誉</a></li>
+                <li><a href="#contact">新闻动态</a></li>
+                <li><a href="#contact">产品中心</a></li>
+                <li><a href="#contact">产品展示</a></li>
+                <li><a href="#contact">联系我们</a></li>
             </ul>
-            <ul class="nav navbar-nav navbar-right">
-                <li><a href="../navbar/">Default</a></li>
-                <li class="active"><a href="./">Static top <span class="sr-only">(current)</span></a></li>
-                <li><a href="../navbar-fixed-top/">Fixed top</a></li>
-            </ul>
+           
         </div>
     </div>
 </nav>
+<div class="container">
+    <h3 class="page-header">
+        公司简介
+    </h3>
+
+    <div class="row">
+        <div class="col-lg-9">
+            <textarea class="form-control" rows="6" placeholder="请输入简介"></textarea>
+        </div>
+        <div class="col-lg-3">
+            图片上传按钮
+        </div>
+        <div class="col-lg-12">
+            <br/>
+            <button class="btn btn-primary">　保存　</button>
+        </div>
+    </div>
+    <br/>
+
+    <h3 class="page-header">
+        公司宗旨
+    </h3>
+    <div class="row">
+        <div class="col-lg-9">
+            <textarea class="form-control" rows="6" placeholder="请输入宗旨"></textarea>
+        </div>
+        <div class="col-lg-3">
+            图片上传按钮
+        </div>
+        <div class="col-lg-12">
+            <br />
+            <button class="btn btn-primary">　保存　</button>
+        </div>
+    </div>
+    <br />
+
+    <h3 class="page-header">
+        产品中心
+    </h3>
+    <div class="row">
+       
+        <div class="col-lg-3">
+            图片上传按钮
+        </div>
+        <div class="col-lg-12">
+            <br />
+            <button class="btn btn-primary">　保存　</button>
+        </div>
+    </div>
+    <br />
+
+    <h3 class="page-header">
+        SEO设置
+    </h3>
+    <div class="row">
+
+        <div class="col-lg-9">
+            <textarea class="form-control" rows="6" placeholder="请输入宗旨"></textarea>
+        </div>
+        <div class="col-lg-12">
+            <br />
+            <button class="btn btn-primary">　保存　</button>
+        </div>
+    </div>
+    <br />
+</div>
