--- a/XinZhiHua/Views/Manager/Index.cshtml
+++ b/XinZhiHua/Views/Manager/Index.cshtml
@@ -1,24 +1,7 @@
-﻿@section add_css{
-    <link rel=stylesheet type=text/css href="@Url.Content("~/Content/Css/manager-index.css")" />
+﻿@{
+    Layout = "~/Views/Shared/_Manager_Layout.cshtml";
 }
-<nav class="navbar navbar-default navbar-static-top">
-    <div class="container">
-        
-        <div id="navbar" class="navbar-collapse collapse">
-            <ul class="nav navbar-nav">
-                <li class="active"><a href="#">首页</a></li>
-                <li><a href="#about">公司简介</a></li>
-                <li><a href="#contact">公司宗旨</a></li>
-                <li><a href="#contact">公司荣誉</a></li>
-                <li><a href="#contact">新闻动态</a></li>
-                <li><a href="#contact">产品中心</a></li>
-                <li><a href="#contact">产品展示</a></li>
-                <li><a href="#contact">联系我们</a></li>
-            </ul>
-           
-        </div>
-    </div>
-</nav>
+
 <div class="container">
     <h3 class="page-header">
         公司简介
