--- a/XinZhiHua/Views/Manager/Product.cshtml
+++ b/XinZhiHua/Views/Manager/Product.cshtml
@@ -1,3 +1,52 @@
 ﻿@{
     Layout = "~/Views/Shared/_Manager_Layout.cshtml";
 }
+<div class="container">
+    <h3 class="page-header">
+        <a href="#add-news" class="btn btn-success pull-right">　＋ 添加产品　</a>
+        产品中心
+    </h3>
+    <table class="table table-striped table-bordered">
+        <thead>
+        <th align="center">封面</th>
+        <th width="50%">标题</th>
+        <th align="center">创建时间</th>
+        <th>操作</th>
+        </thead>
+        <tr>
+            <td>
+                图片
+            </td>
+            <td><a href="#">标题内页</a></td>
+            <td>2017-01-01 17:00</td>
+            <td>
+                <a href="#"><i class="glyphicon glyphicon-edit"></i> </a>　
+                <a href="#"><i class="glyphicon glyphicon-trash"></i></a>
+            </td>
+        </tr>
+    </table>
+    <div class="pager-nav">
+        <span class="pull-right" style="padding-top:10px">
+            1/5页,共55条
+        </span>
+        <ul class="pagination">
+            <li class="disabled">
+                <a href="#" aria-label="Previous">
+                    <span aria-hidden="true">&laquo;</span>
+                </a>
+            </li>
+            <li class="active"><a href="#">1</a></li>
+            <li><a href="#">2</a></li>
+            <li><a href="#">3</a></li>
+            <li><a href="#">4</a></li>
+            <li><a href="#">5</a></li>
+            <li>
+                <a href="#" aria-label="Next">
+                    <span aria-hidden="true">&raquo;</span>
+                </a>
+            </li>
+
+        </ul>
+    </div>
+
+</div>
