--- a/XinZhiHua/Views/Manager/Product.cshtml
+++ b/XinZhiHua/Views/Manager/Product.cshtml
@@ -1,52 +1,78 @@
 ﻿@{
     Layout = "~/Views/Shared/_Manager_Layout.cshtml";
+
+    string action_name = ViewContext.RouteData.Values["action"].ToString().ToLower();
+
+    List<NewAndProduct> data = new List<NewAndProduct>();
+    if (!string.IsNullOrEmpty(ViewBag.Data))
+    {
+        data = Newtonsoft.Json.JsonConvert.DeserializeObject<List<NewAndProduct>>(ViewBag.Data);
+    }
 }
+@section add_css{
+    <style>
+        table td{vertical-align:middle!important}
+    </style>
+}
+
 <div class="container">
     <h3 class="page-header">
-        <a href="#add-news" class="btn btn-success pull-right">　＋ 添加产品　</a>
+        <a href="@Url.Content("~/Manager/ProductEdit")" class="btn btn-success pull-right">　＋ 添加产品　</a>
         产品中心
     </h3>
     <table class="table table-striped table-bordered">
         <thead>
-        <th align="center">封面</th>
-        <th width="50%">标题</th>
-        <th align="center">创建时间</th>
-        <th>操作</th>
+            <th align="center">封面</th>
+            <th width="50%">标题</th>
+            <th align="center">创建时间</th>
+            <th>操作</th>
         </thead>
-        <tr>
-            <td>
-                图片
-            </td>
-            <td><a href="#">标题内页</a></td>
-            <td>2017-01-01 17:00</td>
-            <td>
-                <a href="#"><i class="glyphicon glyphicon-edit"></i> </a>　
-                <a href="#"><i class="glyphicon glyphicon-trash"></i></a>
-            </td>
-        </tr>
+        @{
+            foreach (NewAndProduct temp in data)
+            {
+                string img = string.IsNullOrEmpty(temp.Img) ? "" : Url.Content(temp.Img);
+                string title = string.IsNullOrEmpty(temp.Title) ? "" : temp.Title;
+                string  addTime = temp.AddTime == null ? "" : temp.AddTime.ToString("yyyy-MM-dd HH:mm:ss");
+
+                <tr>
+                    <td style="text-align:center">
+                        <img src="@img" style="height:80px;width:80px">
+                    </td>
+                    <td>@title</td>
+                    <td>@addTime</td>
+                    <td>
+                        <a href="@Url.Content("~/Manager/ProductEdit?id="+temp.Id)"><i class="glyphicon glyphicon-edit"></i> </a>
+                        <a href="@Url.Content("~/Manager/ProductDelete?id="+temp.Id)" onClick="return confirm('确定删除?');"><i class="glyphicon glyphicon-trash"></i></a>
+                    </td>
+                </tr>
+            }
+        }
     </table>
     <div class="pager-nav">
         <span class="pull-right" style="padding-top:10px">
-            1/5页,共55条
+            @{@ViewBag.NowPage}/@{@ViewBag.AllPage}页,共@{@ViewBag.AllCount}条
         </span>
         <ul class="pagination">
-            <li class="disabled">
-                <a href="#" aria-label="Previous">
-                    <span aria-hidden="true">&laquo;</span>
+            <li >
+                <a href="@Url.Content("~/Manager/Product?page=1")" aria-label="Previous">
+                    <span aria-hidden="true">&laquo;第一页</span>
                 </a>
             </li>
-            <li class="active"><a href="#">1</a></li>
-            <li><a href="#">2</a></li>
-            <li><a href="#">3</a></li>
-            <li><a href="#">4</a></li>
-            <li><a href="#">5</a></li>
+            @{
+                for (int i = 1; i <= ViewBag.AllPage; i++)
+                {
+                    string active = i == ViewBag.NowPage ? "active" : "";
+                    if (i >= ViewBag.NowPage - 3 && i <= ViewBag.NowPage + 3)
+                    {
+                        <li class="@active"><a href="@Url.Content("~/Manager/Product?page=" + i)">@i</a></li>
+                    }
+                }
+            }
             <li>
-                <a href="#" aria-label="Next">
-                    <span aria-hidden="true">&raquo;</span>
+                <a href="@Url.Content("~/Manager/Product?page=" + ViewBag.AllPage)" aria-label="Next">
+                    <span aria-hidden="true">&raquo;最后一页</span>
                 </a>
             </li>
-
         </ul>
     </div>
-
 </div>
