--- a/XinZhiHua/Views/Shared/_Layout.cshtml
+++ b/XinZhiHua/Views/Shared/_Layout.cshtml
@@ -1,13 +1,20 @@
-﻿<!DOCTYPE html PUBLIC "-//WAPFORUM//DTD XHTML Mobile 1.0//EN" "http://www.wapforum.org/DTD/xhtml-mobile10.dtd">
+﻿<!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=0" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="@ViewBag.SEO">
+    <meta name="keywords" content="@ViewBag.SEO">
     <title>@ViewBag.Title</title>
+    <!--[if lt IE 9]>
+        <script src="https://cdn.bootcss.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+        <script src="https://cdn.bootcss.com/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
     <link rel=stylesheet type=text/css href="@Url.Content("~/Content/Lib/bootstrap-3.3.0-dist/css/bootstrap.min.css")" />
     @RenderSection("add_css", required: false)
     <script src="@Url.Content("~/Content/Lib/jquery-3.1.1.js")"></script>
+    <script src="@Url.Content("~/Content/Lib/bootstrap-3.3.0-dist/js/bootstrap.min.js")"></script>
     @RenderSection("add_scripts", required: false)
 </head>
 <body>
