--- a/XinZhiHua/Views/Shared/_Layout.cshtml
+++ b/XinZhiHua/Views/Shared/_Layout.cshtml
@@ -11,10 +11,9 @@
         <script src="https://cdn.bootcss.com/html5shiv/3.7.3/html5shiv.min.js"></script>
         <script src="https://cdn.bootcss.com/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-    <link rel=stylesheet type=text/css href="@Url.Content("~/Content/Lib/bootstrap-3.3.0-dist/css/bootstrap.min.css")" />
     @RenderSection("add_css", required: false)
     <script src="@Url.Content("~/Content/Lib/jquery-3.1.1.js")"></script>
-    <script src="@Url.Content("~/Content/Lib/bootstrap-3.3.0-dist/js/bootstrap.min.js")"></script>
+    <script src="@Url.Content("~/Content/Lib/bootstrap-3.3.0-dist/js/bootstrap.js")"></script>
     @RenderSection("add_scripts", required: false)
 </head>
 <body>
