--- a/XinZhiHua/Views/Shared/_Manager_Layout.cshtml
+++ b/XinZhiHua/Views/Shared/_Manager_Layout.cshtml
@@ -6,6 +6,7 @@
 }
 @section add_css{
     <link rel=stylesheet type=text/css href="@Url.Content("~/Content/Css/manager-common.css")" />
+    <link rel=stylesheet type=text/css href="@Url.Content("~/Content/Lib/bootstrap-3.3.0-dist/css/bootstrap.css")" />
     @RenderSection("add_css", required: false)
 }
 
