--- a/XinZhiHua/Content/Css/home-index.css
+++ b/XinZhiHua/Content/Css/home-index.css
@@ -69,7 +69,7 @@ body{
 .header-nav .two li:nth-child(1){
 	background: #ccc;
 }
-.header-nav li.active{
+.header-nav .two  li.active{
 	background: #687758;
 }
 .header-nav li a{
