--- a/XinZhiHua/Views/Home/Show.cshtml
+++ b/XinZhiHua/Views/Home/Show.cshtml
@@ -21,30 +21,34 @@
             }
          </div>
     </div><!-- news-list -->
-    <div class="text-center">
-        <ul class="pagination">
-            <li>
-                <a href="@Url.Content("~/Home/Show?page=1")" aria-label="Previous">
-                    <span aria-hidden="true">&laquo;第一页</span>
-                </a>
-            </li>
+    @if (ViewBag.AllCount != 0)
+    {
+        <div class="text-center">
+            <ul class="pagination">
+                <li>
+                    <a href="@Url.Content("~/Home/Show?page=1")" aria-label="Previous">
+                        <span aria-hidden="true">&laquo;第一页</span>
+                    </a>
+                </li>
 
-            @{
-                for (int i = 1; i <= ViewBag.AllPage; i++)
-                {
-                    string active = i == ViewBag.NowPage ? "active" : "";
-                    if (i >= ViewBag.NowPage - 3 && i <= ViewBag.NowPage + 3)
+                @{
+                    for (int i = 1; i <= ViewBag.AllPage; i++)
                     {
-                        <li class="@active"><a href="@Url.Content("~/Home/Show?page="+ i)">@i</a></li>
+                        string active = i == ViewBag.NowPage ? "active" : "";
+                        if (i >= ViewBag.NowPage - 3 && i <= ViewBag.NowPage + 3)
+                        {
+                            <li class="@active"><a href="@Url.Content("~/Home/Show?page="+ i)">@i</a></li>
+                        }
                     }
                 }
-            }
-            <li>
-                <a href="@Url.Content("~/Home/Show?page="+ ViewBag.AllPage)" aria-label="Next">
-                    <span aria-hidden="true">&raquo;最后一页</span>
-                </a>
-            </li>
-        </ul>
-    </div>
+                <li>
+                    <a href="@Url.Content("~/Home/Show?page="+ ViewBag.AllPage)" aria-label="Next">
+                        <span aria-hidden="true">&raquo;最后一页</span>
+                    </a>
+                </li>
+            </ul>
+        </div>
+    }
+
 
 </div>
