--- a/XinZhiHua/Views/Manager/LogOn.cshtml
+++ b/XinZhiHua/Views/Manager/LogOn.cshtml
@@ -1,4 +1,5 @@
 ﻿@section add_css{
+    <link rel=stylesheet type=text/css href="@Url.Content("~/Content/Lib/bootstrap-3.3.0-dist/css/bootstrap.css")" />
     <link rel=stylesheet type=text/css href="@Url.Content("~/Content/Css/manager-logon.css")" />
 }
 
